feat: TIN-128 add delete prompt handler (#21)
* feat: TIN-128 update profiles proto

* fix: docker compose

* feat: TIN-128 protoc gen

* feat: TIN-128 add delete handler

* feat: TIN-128 update docs
